...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfP-M5-Gqf">
                                                <rect key="frame" x="76" y="0.0" width="61" height="63"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="63" id="Bbd-bX-mhi"/>
                                                    <constraint firstAttribute="width" constant="61" id="f0E-09-aoa"/>
                                                </constraints>
                                                <state key="normal" image="divide"/>
                                                <connections>
                                                    <action selector="onDividePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MFp-qS-rVR"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejW-kP-7P7">
                                                <rect key="frame" x="152" y="0.0" width="61" height="63"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="63" id="7yw-VR-p3r"/>
                                                    <constraint firstAttribute="width" constant="61" id="ZDf-HQ-hea"/>
                                                </constraints>
                                                <state key="normal" image="multiply"/>
                                                <connections>
                                                    <action selector="onMultiplyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M2w-bW-Dom"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKz-qj-R4e">
                                                <rect key="frame" x="0.0" y="0.0" width="61" height="63"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="63" id="I3N-Jl-aci"/>
                                                    <constraint firstAttribute="width" constant="61" id="fuK-jY-eeQ"/>
                                                </constraints>
                                                <state key="normal" image="subtract"/>
                                                <connections>
                                                    <action selector="onSubtractPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jS2-3G-hgB"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZLz-d3-cNL">
                                                <rect key="frame" x="76" y="0.0" width="61" height="63"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="63" id="NFe-kp-gPi"/>
                                                    <constraint firstAttribute="width" constant="61" id="ZwD-CV-rwm"/>
                                                </constraints>
                                                <state key="normal" image="add"/>
                                                <connections>
                                                    <action selector="onAddPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Iiq-qq-f3T"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzf-8y-JzL">
                                                <rect key="frame" x="152" y="0.0" width="61" height="63"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="63" id="OGk-X6-mEI"/>
                                                    <constraint firstAttribute="width" constant="61" id="R5g-Qv-iEl"/>
                                                </constraints>
                                                <state key="normal" image="equal"/>
                                                <connections>
                                                    <action selector="onEqualPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y51-nM-zIg"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iu8-tu-Chs" userLabel="Clear">
                                <rect key="frame" x="81" y="514" width="213" height="64"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="213" id="0dp-wd-hAx"/>
                                    <constraint firstAttribute="height" constant="64" id="wwl-yP-w3a"/>
                                </constraints>
                                <state key="normal" image="clear"/>
                                <connections>
                                    <action selector="onClearPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tZo-3d-eIg"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
